# django-payments-paybox

./: .gitignore  README.md  pyproject.toml
django_payments_paybox/: __init__.py  provider.py  schemas.py  utils.py
tests/: test_django_payments_paybox.py
